...
                                    <constraint firstAttribute="height" constant="32" id="GIw-Tb-E3y"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Departure" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OHY-Y1-wLR">
                                <rect key="frame" x="20" y="196" width="560" height="42"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="Departure Text Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="WNd-8F-RwP"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Arrival" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3zq-Sa-nd7">
                                <rect key="frame" x="20" y="253" width="560" height="42"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="Arrival Text Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="3aV-5t-eEV"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                                <color key="backgroundColor" red="0.20392156859999999" green="0.42745098040000001" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Search Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="7Es-T1-5Gl"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="18"/>
                                <state key="normal" title="Search">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="searchLocations:" destination="Jw8-iz-6Lo" eventType="touchUpInside" id="FTT-Cj-4FW"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="15-10-2015" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xty-Tp-dZS">
                                <rect key="frame" x="20" y="310" width="560" height="42"/>
                                <animations/>
                                <color key="backgroundColor" red="0.86666666670000003" green="0.92941176469999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Date Text Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="FG8-rL-uDB"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
